final changes to 2nd project

--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -4,9 +4,8 @@
 
     <data>
         <variable
-            name="viewModel"
+            name="mainViewModel"
             type="com.udacity.asteroidradar.main.MainViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,10 +27,12 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                app:imageUrl="@{mainViewModel.imageOfDay.url}"
+                android:contentDescription="@{mainViewModel.imageOfDay.title}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_image_of_the_day"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
@@ -40,7 +41,7 @@
                 android:textSize="20sp"
                 android:layout_gravity="bottom"
                 android:background="#55010613"
-                android:text="@string/image_of_the_day" />
+                android:text="@{mainViewModel.imageOfDay.title}" />
         </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
